added enrich map to the app in dea module

--- a/vignettes/DIANE_Programming_Interface.Rmd
+++ b/vignettes/DIANE_Programming_Interface.Rmd
@@ -247,6 +247,8 @@ background <- convert_from_agi(background)
 
 go <- enrich_go(genes, background)
 DIANE::draw_enrich_go(go, max_go = 30)
+
+DIANE::draw_enrich_go_map(go)
 ```
 
 
