removed buggy xlim in degree out in network connectivity plot

--- a/R/clustering_report.Rmd
+++ b/R/clustering_report.Rmd
@@ -9,6 +9,7 @@ output:
 params:
   r: NA
   input: NA
+  normalized_counts: NA
 ---
   
 ```{r, include=FALSE}
@@ -63,8 +64,9 @@ draw_coseq_run(r$model, plot = "barplots")
 
 Normalized expression profiles of the clusters:
 ```{r, fig.width=10, fig.height=10}
+
 draw_profiles(
-      data = r$normalized_counts,
+      data = params$normalized_counts,
       conds = r$conditions,
       membership = r$membership
     )
